# kolakoski

./: .gitmodules  .travis.yml  CMakeLists.txt  README.md  main.cpp
leapfrogging/: leapfrogging.cpp  leapfrogging.hpp
